--- a/microservices/landing/app/requirements.txt
+++ b/microservices/landing/app/requirements.txt
@@ -1,1 +1,3 @@
-# Follow Task-0 subtask-0 to complete this file. Remove this comment if you think it is causing build issues.
+flask==2.2
+requests==2.28
+flask-restful==0.3.8
